<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a_023"
                android:textColor="@color/secondary_text" />

            <TextView
                android:id="@+id/edtAplicativo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/primary_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/v_025"
                android:textColor="@color/secondary_text" />

            <TextView
                android:id="@+id/edtVersao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/primary_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c_021"
                android:textColor="@color/secondary_text" />

            <TextView
                android:id="@+id/edtCopyright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/copyright"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/primary_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c_022"
                android:textColor="@color/secondary_text" />

            <TextView
                android:id="@+id/edtContato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/contato"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/primary_text"
                android:autoLink="email" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/v_019"
                android:textColor="@color/secondary_text" />

            <EditText
                android:id="@+id/edtVisao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:drawableRight="@drawable/ic_magnify_dark"
                android:focusable="false"
                android:inputType="text"
                android:maxLength="40" />

            <Button
                android:id="@+id/btnBackup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/primary"
                android:padding="15dp"
                android:text="@string/r_008"
                android:textColor="@color/icons" />

            <Button
                android:id="@+id/btnRestore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/primary"
                android:padding="15dp"
                android:text="@string/r_011"
                android:textColor="@color/icons" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>
